<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/enterText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/enter_text"
        android:maxLength="@integer/maxSize" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/displayText"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/displayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/enterText"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/enterText"
        android:text="@string/display_text" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/displayToast"
        android:layout_below="@+id/textView1"
        android:text="@string/display_alert" />

    <TextView
        android:id="@+id/response"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1"
        android:layout_alignTop="@+id/registerButton"
        android:layout_toRightOf="@+id/registerButton" />

    <Button
        android:id="@+id/displayToast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/registerButton"
        android:text="@string/display_toast" />

    <Button
        android:id="@+id/openRegisterForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/openSimpleBrowser"
        android:layout_alignLeft="@+id/openWebview"
        android:text="@string/register_form" />

    <Button
        android:id="@+id/openWebview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/displayToast"
        android:layout_alignParentBottom="true"
        android:text="@string/open_webview_native_interaction" />

    <Button
        android:id="@+id/openSimpleBrowser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/response"
        android:text="@string/open_browser_webview" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/displayToast">
        
    <RadioButton
        android:id="@+id/redRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       	android:text="@string/red" 
       	android:onClick="onRadioButtonClicked"/>

    <RadioButton
        android:id="@+id/yellowRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yellow" 
        android:onClick="onRadioButtonClicked"/>

    <RadioButton
        android:id="@+id/greenRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/green" 
    	android:onClick="onRadioButtonClicked"/>
	</RadioGroup>

</RelativeLayout>