<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity" >

    <TextView
        android:id="@+id/response"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:text="@string/email" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="346dp"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="347dp"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:id="@+id/mobileLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/userNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile_os" />

    <Spinner
        android:id="@+id/mobileSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/string_array"
        android:prompt="@string/mobile_os" />

    <CheckBox
        android:id="@+id/tosCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acceptTermsOfService" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/register" />

</LinearLayout>
